# astral-watch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
docs/: SAFETY.md  grafana-dashboard.json
nix/: module.nix
packaging/: 99-astral-watch.rules  astral-watch-safety.service  astral-watch.service  astral-watch.toml
packaging/aur/: PKGBUILD  README.md
packaging/modules-load.d/: astral-watch.conf
packaging/nfpm/: nfpm.yaml  postinstall.sh  postremove.sh  preremove.sh
packaging/sysusers.d/: astral-watch.conf
src/: alert.rs  cards.rs  config.rs  decode.rs  exporter.rs  i2c.rs  lib.rs  lifecycle.rs  logger.rs  main.rs  metrics.rs  notify.rs  safety.rs  tui.rs
