[package]
name = "astral-watch"
version = "0.3.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Per-pin 12V-2x6 power monitoring and connector-melt protection for ASUS ROG Astral GPUs on Linux"
repository = "https://github.com/mbeaman/astral-watch"
homepage = "https://github.com/mbeaman/astral-watch"
readme = "README.md"
exclude = [".github/"]
keywords = ["gpu", "nvidia", "asus", "12vhpwr", "monitoring"]
categories = ["command-line-utilities"]

[lib]
name = "astral_watch"
path = "src/lib.rs"

[[bin]]
name = "astral-watch"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
i2cdev = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
serde_json = "1"
ureq = { version = "3", default-features = false, features = ["rustls", "json", "gzip"] }
signal-hook = "0.4"
# optional: the `tui` feature pulls ratatui (+crossterm) and raises the MSRV to 1.88; the
# default build stays dependency-light at 1.85 for the headless service
ratatui = { version = "0.29", optional = true }

[features]
tui = ["dep:ratatui"]

[profile.release]
lto = true
strip = true
